--- a/data_security/index.html
+++ b/data_security/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your topic</title>
+  <title>Data security</title>
   <link rel="stylesheet" href="../styles/styles_home.css">
+   
   
-  <!-- This is the way to add your own topic specific styles (no need to change the styles_home file)-->
   <link rel="stylesheet" href="../styles/styles_example.css">
   
 </head>
@@ -18,7 +18,7 @@
   </div>
   
   <div id="maincontent">
-    <h1>Topic name</h1>
+    <h1>Data security</h1>
     <p>This is the main page of your presentation (always "index.html"). You can freely add pages, links, 
     images etc and change the look using your topic specific CSS.</p>
   </div>
