--- a/data_security/index.html
+++ b/data_security/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="navbar">
     <a href="../index.html">Home</a>
-    <a href="">Link 2</a>
+    <a href="">https://en.wikipedia.org/wiki/Data_security rel="Wikipedia"</a>
     <a href="">Link 3</a>
     <a href="">Link 4</a>
     <!-- Possibly other links -->
