--- a/data_security/index.html
+++ b/data_security/index.html
@@ -11,9 +11,9 @@
 <body>
   <div id="navbar">
     <a href="../index.html">Home</a>
-    <a href="">https://en.wikipedia.org/wiki/Data_security rel="Wikipedia"</a>
-    <a href="">Link 3</a>
-    <a href="">Link 4</a>
+    <a rel="Wikipedia" href=">https://en.wikipedia.org/wiki/Data_security" </a>
+    <a href="https://www.techopedia.com/definition/26464/data-security">Techopedia</a>
+    <a href="https://www.iss.europa.eu/content/data-protection">ISS</a>
     <!-- Possibly other links -->
   </div>
   
