--- a/data_security/index.html
+++ b/data_security/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="navbar">
     <a href="../index.html">Home</a>
-    <a rel="Wikipedia" href=">https://en.wikipedia.org/wiki/Data_security" </a>
+    <a href="https://en.wikipedia.org/wiki/Data_security" >Wikipedia</a>
     <a href="https://www.techopedia.com/definition/26464/data-security">Techopedia</a>
     <a href="https://www.iss.europa.eu/content/data-protection">ISS</a>
     <!-- Possibly other links -->
