--- a/data_security/index.html
+++ b/data_security/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Data security</title>
+  <link rel="stylesheet" href="../styles/styles_home.css">
+   
+  
+  <link rel="stylesheet" href="../styles/styles_example.css">
+  
+</head>
+<body>
+  <div id="navbar">
+    <a href="../index.html">Home</a>
+    <a href="https://en.wikipedia.org/wiki/Data_security" >Wikipedia</a>
+    <a href="https://www.techopedia.com/definition/26464/data-security">Techopedia</a>
+    <a href="https://www.iss.europa.eu/content/data-protection">ISS</a>
+    <!-- Possibly other links -->
+  </div>
+  
+  <div id="maincontent">
+    <h1>Data security</h1>
+    <p>This is the main page of your presentation (always "index.html"). You can freely add pages, links, 
+    images etc and change the look using your topic specific CSS.</p>
+  </div>
+ 
+</body>
+</html>
