--- a/data_security/index.html
+++ b/data_security/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Data security</title>
-  <link rel="stylesheet" href="../styles/styles_home.css">
+  <link rel="stylesheet" href="../data_security/data.css">
    
   
-  <link rel="stylesheet" href="../styles/styles_example.css">
+
   
 </head>
 <body>
@@ -14,13 +14,11 @@
     <a href="https://en.wikipedia.org/wiki/Data_security" >Wikipedia</a>
     <a href="https://www.techopedia.com/definition/26464/data-security">Techopedia</a>
     <a href="https://www.iss.europa.eu/content/data-protection">ISS</a>
-    <!-- Possibly other links -->
   </div>
   
   <div id="maincontent">
     <h1>Data security</h1>
-    <p>This is the main page of your presentation (always "index.html"). You can freely add pages, links, 
-    images etc and change the look using your topic specific CSS.</p>
+    <p>Disk encryption refers to encryption technology that encrypts data on a hard disk drive. Disk encryption typically takes form in either software (see disk encryption software) or hardware (see disk encryption hardware). Disk encryption is often referred to as on-the-fly encryption (OTFE) or transparent encryption.</p>
   </div>
  
 </body>
