--- a/data_security/index.html
+++ b/data_security/index.html
@@ -17,8 +17,10 @@
   </div>
   
   <div id="maincontent">
-    <h1>Data security</h1>
-    <p>Disk encryption refers to encryption technology that encrypts data on a hard disk drive. Disk encryption typically takes form in either software (see disk encryption software) or hardware (see disk encryption hardware). Disk encryption is often referred to as on-the-fly encryption (OTFE) or transparent encryption.</p>
+    <h1>Disk encryption</h1>
+    <p>Disk encryption refers to encryption technology that encrypts data on a hard disk drive. Disk encryption typically 
+     takes form in either software (see disk encryption software) or hardware (see disk encryption hardware). Disk encryption 
+     is often referred to as on-the-fly encryption (OTFE) or transparent encryption.</p>
   </div>
  
 </body>
