--- a/example/index.html
+++ b/example/index.html
@@ -3,10 +3,10 @@
 <head>
   <title>Your topic</title>
   <link rel="stylesheet" href="../styles/styles_home.css">
-  
+
   <!-- This is the way to add your own topic specific styles (no need to change the styles_home file)-->
   <link rel="stylesheet" href="../styles/styles_example.css">
-  
+
 </head>
 <body>
   <div id="navbar">
@@ -16,14 +16,14 @@
     <a href="">Link 4</a>
     <!-- Possibly other links -->
   </div>
-  
+
   <div id="maincontent">
     <h1>Topic name</h1>
-    <p>This is the main page of your presentation (always "index.html"). You can freely add pages, links, 
-    images etc and change the look using your topic specific CSS 
-    (create a new file in the <i>styles</i> folder and name it <i>styles_XXXX.css</i> where XXXX is replaced by your topic). 
-    You can copy the code in <i>styles_home.css</i> to make it easier to begin.</p>
+    <p>This is the main page of your presentation (always "index.html"). You can freely add pages, links,
+    images etc and change the look using your topic specific CSS
+    (create a new file in the <i>styles</i> folder and name it <i>styles_XXXX.css</i> where XXXX is replaced by your topic).
+    You can copy the code in <i>styles_home.css</i> to make it easier to begin. Just testing.</p>
   </div>
- 
+
 </body>
 </html>
