--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="example/index.html">Example</a>
      <a href="phishing/index.html">Phishing</a>
       <a href="data_security/index.html">Data security</a>
-      <a href="Virus/index.html">Free virus</a>
+      <a href="Virus/index.html">Free virus (download)</a>
   </div>
   <div id="maincontent">
     <h1>IT and Society</h1>
