--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <p>This is the main page of the IT and Society project. The links above take you to specific topics.</p>
 
     <p>Done by EEB2 students of ICT (S4) in 2018 with some guidance provided by teacher Mr. Kerkkänen.</p>
+
+    <p>The goal of the project is to learn the basic use of version management tools,
+    to learn more about HTML and CSS and, of course, to learn about topics above.</p>
   </div>
 
 </body>
