--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
   <div id="navbar">
     <a href="example/index.html">Example</a>
     <a href="phishing/index.html">Phishing</a>
-
     <a href="data_security/index.html">Data security</a>
-    <a href="Virus/index.html">Free virus (download)</a>
+    <a href="Virus/index.html">Viruses</a>
   </div>
   <div id="maincontent">
     <h1>IT and Society</h1>
 
-    <p>This is the main page of the IT and Society project. The links above take you to specific topics.</p>
+    <p>This is the main page of the IT and Society project.
+      The links above take you to specific topics.</p>
 
-    <p>Done by EEB2 students of ICT (S4) in 2018 with some guidance provided by teacher Mr. Kerkkänen.</p>
+    <p>Done by EEB2 students of ICT (S4) in 2018 with some
+       guidance provided by teacher Mr. Kerkkänen.</p>
 
-    <p>The goal of the project is to learn the basic use of version management tools,
-    to learn more about HTML and CSS and, of course, to learn about topics above.</p>
+    <p style="font-weight: bold">Some learning targers of the project:</p>
+    <p>Version management (Git & GitHub with Atom)</p>
+    <p>Project management and collaboration</p>
+    <p>HTML and CSS</p>
+    <p>About the topics</p>
   </div>
 
 </body>
