--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="phishing/index.html">Phishing</a>
     <a href="data_security/index.html">Data security</a>
     <a href="Virus/index.html">Viruses</a>
+    <a href="Encryption - P,O,C/index.html">Encryption</a>
   </div>
   <div id="maincontent">
     <h1>IT and Society</h1>
