--- a/Encryption - P,O,C/index.html
+++ b/Encryption - P,O,C/index.html
@@ -129,12 +129,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="Encryption - P,O,C/assets/js/jquery.min.js"></script>
+			<script src="Encryption - P,O,C/assets/js/jquery.scrolly.min.js"></script>
+			<script src="Encryption - P,O,C/assets/js/jquery.scrollex.min.js"></script>
+			<script src="Encryption - P,O,C/assets/js/skel.min.js"></script>
+			<script src="Encryption - P,O,C/assets/js/util.js"></script>
+			<script src="Encryption - P,O,C/assets/js/main.js"></script>
 
 	</body>
 </html>
