--- a/Encryption - P,O,C/encryptionuses_learnmore.html
+++ b/Encryption - P,O,C/encryptionuses_learnmore.html
@@ -20,6 +20,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="whatisencryption_learnmore.html">What is Encryption?</a></li>
 					<li><a href="encryptionuses_learnmore.html">Encryption Uses</a></li>
+					<li><a href="sources.html">Our Sources</a></li>
 				</ul>
 			</nav>
 
