--- a/Encryption - P,O,C/index.html
+++ b/Encryption - P,O,C/index.html
@@ -22,6 +22,7 @@
 					<li><a href="encryptionuses_learnmore.html">Encryption Uses</a></li>
 					<li><a href="messageverification_learnmore.html">Message Verification</a></li>
 					<li><a href="history_learnmore.html">Encryption History</a></li>
+					<li><a href="sources.html">Our Sources</a></li>
 				</ul>
 			</nav>
 
