--- a/Encryption - P,O,C/messageverification_learnmore.html
+++ b/Encryption - P,O,C/messageverification_learnmore.html
@@ -20,6 +20,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="whatisencryption_learnmore.html">What is Encryption?</a></li>
 					<li><a href="encryptionuses_learnmore.html">Encryption Uses</a></li>
+					<li><a href="sources.html">Our Sources</a></li>
 				</ul>
 			</nav>
 
@@ -34,7 +35,7 @@
 						</header>
 						<div class="content">
 							<p>Message verification - Encryption, by itself, can protect the confidentiality of messages, but other techniques are still needed to protect the integrity and authenticity of a message; for example, verification of a message authentication code (MAC) or a digital signature. Standards for cryptographic software and hardware to perform encryption are widely available, but successfully using encryption to ensure security may be a challenging problem. A single error in system design or execution can allow successful attacks. Sometimes an adversary can obtain unencrypted information without directly undoing the encryption.
-							   Data erasure - Conventional methods for deleting data permanently from a storage device involve overwriting its whole content with zeros, ones or other patterns – a process which can take a significant amount of time, depending on the capacity and the type of the medium. Cryptography offers a way of making the erasure almost instantaneous. This method is called crypto-shredding. An example implementation of this method can be found on iOS devices, where the cryptographic key is kept in a dedicated 'Effaceable Storage.</p>
+							   Data erasure - Conventional methods for deleting data permanently from a storage device involve overwriting its whole content with zeros, ones or other patterns â€“ a process which can take a significant amount of time, depending on the capacity and the type of the medium. Cryptography offers a way of making the erasure almost instantaneous. This method is called crypto-shredding. An example implementation of this method can be found on iOS devices, where the cryptographic key is kept in a dedicated 'Effaceable Storage.</p>
 
 
 						</div>
