--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="data_security/index.html">Data security</a>
     <a href="Virus/index.html">Viruses</a>
     <a href="Encryption - P,O,C/index.html">Encryption</a>
+    <a href="AI/index.html">AI</a>
   </div>
   <div id="maincontent">
     <h1>IT and Society</h1>
