--- a/AI/index.html
+++ b/AI/index.html
@@ -1,1 +1,12 @@
-
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style_AI.css">
+  </head>
+  <body>
+    <div class="parallax">
+    <h1 class="BIGASSTITLE">AI</h1>
+      </div>
+      <h1 class="MEDIUMASSTITLE">What is it?</h1>
+      <p class="NORMALASSTEXT"><b>no i'm not</p>
+  </body>
+</html>
