--- a/AI/index.html
+++ b/AI/index.html
@@ -6,7 +6,9 @@
     <div class="parallax">
     <h1 class="BIGASSTITLE">AI</h1>
       </div>
+    <div>
       <h1 class="MEDIUMASSTITLE">What is it?</h1>
       <p class="NORMALASSTEXT"><b>no i'm not</p>
+    </div>
   </body>
 </html>
