--- a/AI/index.html
+++ b/AI/index.html
@@ -7,7 +7,7 @@
     <h1 class="BIGASSTITLE">AI</h1>
       </div>
       <h1 class="MEDIUMASSTITLE">What is it?</h1>
-      <p class="NORMALASSTEXT"><b>no i'm not</p>
+      <p class="NORMALASSTEXT"><b></p>
       <div>
       </div>
   </body>
