--- a/AI/index.html
+++ b/AI/index.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" type="text/css" href="style_AI.css">
   </head>
   <body>
+    <div>
+    </div>
     <div class="parallax">
     <h1 class="BIGASSTITLE">AI</h1>
       </div>
