--- a/AI/index.html
+++ b/AI/index.html
@@ -8,9 +8,9 @@
     <div class="parallax">
     <h1 class="BIGASSTITLE">AI</h1>
       </div>
+    <div class: parallax2>
       <h1 class="MEDIUMASSTITLE">What is it?</h1>
       <p class="NORMALASSTEXT"></p>
-      <div>
       </div>
   </body>
 </html>
