--- a/AI/index.html
+++ b/AI/index.html
@@ -3,7 +3,13 @@
     <link rel="stylesheet" type="text/css" href="style_AI.css">
   </head>
   <body>
-    <div>
+    <div id="navbar">
+    <a href="example/index.html">Example</a>
+    <a href="phishing/index.html">Phishing</a>
+    <a href="data_security/index.html">Data security</a>
+    <a href="Virus/index.html">Viruses</a>
+    <a href="Encryption - P,O,C/index.html">Encryption</a>
+    <a href="AI/index.html">AI</a>
     </div>
     <div class="parallax">
     <h1 class="BIGASSTITLE">AI</h1>
