--- a/AI/index.html
+++ b/AI/index.html
@@ -8,8 +8,8 @@
     <a href="phishing/index.html">Phishing</a>
     <a href="data_security/index.html">Data security</a>
     <a href="Virus/index.html">Viruses</a>
-    <a href="Encryption - P,O,C/index.html">Encryption</a>
-    <a href="AI/index.html">AI</a>
+    <a href=".../Encryption - P,O,C/index.html">Encryption</a>
+    <a href="AI/index.html/">AI</a>
     </div>
     <div class="parallax">
     <h1 class="BIGASSTITLE">AI</h1>
