--- a/AI/index.html
+++ b/AI/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id="navbar">
+    <a href="../index.html">Home</a>
     <a href="../example/index.html">Example</a>
     <a href="../phishing/index.html">Phishing</a>
     <a href="../data_security/index.html">Data security</a>
