--- a/AI/index.html
+++ b/AI/index.html
@@ -15,7 +15,7 @@
     <h1 class="BIGASSTITLE">AI</h1>
       </div>
     <div class="parallax2">
-      <h1 class="MEDIUMASSTITLE">What is it?</h1>
+      <a href="what_is_it?"><h1 class="MEDIUMASSTITLE">What is it?</h1></a>
       <p class="NORMALASSTEXT"></p>
       </div>
   </body>
