--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="example/index.html">Example</a>
     <a href="phishing/index.html">Phishing</a>
     <a href="data_security/index.html">Data security</a>
-    <a href="Virus/index.html">Viruses</a>
+    <a href="Virus/Main.html">Viruses</a>
     <a href="Encryption - P,O,C/index.html">Encryption</a>
     <a href="AI/index.html">AI</a>
   </div>
