--- a/AI/what_is_it.html
+++ b/AI/what_is_it.html
@@ -13,7 +13,7 @@
       <a href="index.html">AI</a>
     </div>
     <div class="parallax">
-      <h1 class="MEDIUMASSTITLE">What is it?</h1>
+      <h1 class="BIGASSTITLE">What is it?</h1>
     </div>
     <p class="NORMALASSTEXT">Artificial intelligence (AI) is an area of computer science that works  on the creation of intelligent machines that work and react like humans. It has become an essential part of the technology industry.
     Some of the activities computers with artificial intelligence are designed for include:</p>
