--- a/AI/index.html
+++ b/AI/index.html
@@ -15,7 +15,7 @@
     <h1 class="BIGASSTITLE">AI</h1>
       </div>
     <div class="parallax2">
-      <a href="what_is_it.html" class="MEDIUMASSLINK">What is it?</a>
+      <a href="what_is_it.html" class="MEDIUMASSTITLE">What is it?</a>
       <p class="NORMALASSTEXT"></p>
       </div>
   </body>
