--- a/AI/what_is_it.html
+++ b/AI/what_is_it.html
@@ -19,9 +19,9 @@
     Some of the activities computers with artificial intelligence are designed for include:</p>
     <ul>
       <li>Speech recognition</li>
-      <li>Learning<li>
-      <li>Planning<li>
-      <li>Problem solving<li>
+      <li>Learning</li>
+      <li>Planning</li>
+      <li>Problem solving</li>
     </ul>
   </body>
 </html>
