--- a/AI/what_is_it.html
+++ b/AI/what_is_it.html
@@ -23,5 +23,9 @@
       <li>Planning</li>
       <li>Problem solving</li>
     </ul>
+    
+    <div class="footer">
+      <p></p>
+    </div>
   </body>
 </html>
