--- a/AI/index.html
+++ b/AI/index.html
@@ -18,5 +18,9 @@
       <a href="what_is_it.html" class="MEDIUMASSTITLE">What is it?</a>
       <p class="NORMALASSTEXT"></p>
       </div>
+    
+     <div class="footer">
+      <p></p>
+    </div>
   </body>
 </html>
