--- a/index.html
+++ b/index.html
@@ -22,11 +22,27 @@
     <p>Done by EEB2 students of ICT (S4) in 2018 with some
        guidance provided by teacher Mr. Kerkkänen.</p>
 
-    <p style="font-weight: bold">Some learning targers of the project:</p>
+    <p style="font-weight: bold">Some learning targets of the project:</p>
     <p>Version management (Git & GitHub with Atom)</p>
     <p>Project management and collaboration</p>
     <p>HTML and CSS</p>
     <p>About the topics</p>
+
+    <h2>Requirements:</h2>
+    <ul>
+    - <li>Every team creates a topic-specific folder to manage the files related to the topic.</li>
+    - <li>Create an `index.html` file in your folder. This is the main page of your topic.</li>
+    - Every team creates a CSS file to change the look of the topic pages. Name it `styles_X.css` where X is replaced by your topic name (or its shorthand expression). Save the CSS file in the `styles` folder and add links to your pages to make it work.
+    - Present your topic in a simple and understandable way. Divide it into logical parts and make the site structure accordingly.
+    - Write your own text. Don't copy-and-paste text without a good reason - and in that case mark the source immediately. *Note: if you don't understand a word or an expression, don't use it! Write the idea in other words or leave it out.*
+    - Linking: you must be able to easily navigate between the pages in your topic folder. Preserve the link to the home of homes, too.
+    - Sources: make a separate HTML page to list the sources (give the links, too).
+    - Copyright: make sure you are allowed to use the images and other materials and follow the given source marking recommendations.
+    </ul>
+    ## Help for citing and sources:
+    - https://wiki.creativecommons.org/wiki/Best_practices_for_attribution (CC-licenced material).
+    - http://www.plagiarism.org/article/how-do-i-cite-sources
+
   </div>
 
 </body>
