--- a/data_security/index.html
+++ b/data_security/index.html
@@ -8,11 +8,10 @@
 <body>
   <div id="navbar">
     <a href="../index.html">Home</a>
-    <a href="https://en.wikipedia.org/wiki/Data_security" >Wikipedia</a>
-    <a href="https://www.techopedia.com/definition/26464/data-security">Techopedia</a>
-    <a href="https://www.iss.europa.eu/content/data-protection">ISS</a>
+    
     <a href="../data_security/links.html">Links</a>
   </div>
+  <img src="ICT.jpg">
 
   
   <div id="maincontent">
