--- a/data_security/index.html
+++ b/data_security/index.html
@@ -51,7 +51,7 @@
         data security is maintained and sensitive information is not exposed to unauthorized personnel. This may include masking the data
         from users (for example so banking customer representatives can only see the last 4 digits of a customers national identity number),
         developers (who need real production data to test new software releases but should not be able to see sensitive financial data),
-        outsourcing vendors, etc.</p>
+        outsourcing vendors etc.</p>
   
 </body>
 </html>
