--- a/computers-in-the-near-future/index.html
+++ b/computers-in-the-near-future/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your topic</title>
+  <title>Computers in the near fututre</title>
   <link rel="stylesheet" href="../styles/styles_home.css">
   
   <!-- This is the way to add your own topic specific styles (no need to change the styles_home file)-->
@@ -18,10 +18,46 @@
   </div>
   
   <div id="maincontent">
-    <h1>Topic name</h1>
-    <p>This is the main page of your presentation (always "index.html"). You can freely add pages, links, 
-    images etc and change the look using your topic specific CSS.</p>
+    
+    <p>Today computers are in virtually everything we touch, all day long. We still have an
+image of computers as being rectangular objects either on a desk, or these days in
+our pockets; but computers are in our cars, they’re in our thermostats, they’re in our
+refrigerators. In fact, increasingly computers are no longer objects at all, but they
+suffuse fabric and virtually every other material. Because of that, we really do need
+to care about what the future of computing holds because it is going to impact our
+lives all day long.
+If you think about the future of computing as a convergence of the biological, the
+physical and the digital (and the post-digital quantum), using as examples 3D-
+printing, biotechnology, robotics for prosthetics, the internet of things, autonomous
+vehicles, other kinds of artificial intelligence, you can see the extent of how life will
+change. We need to make sure that these developments benefit all of society, not
+just the most wealthy members of society who might want these prosthetics, but
+every person who needs them.
+One of our first questions in the Council is going to be, how do we establish
+governance for equitable innovation? How do we foster the equitable benefits of
+these technologies for every nation and every person in every nation? And, is top-
+down governance the right model for controlling the use of these technologies, or is
+bottom-up ethical education of those that engage in the development of the
+technologies and their distribution, a better way to think about how to ensure
+equitable use?
+I believe that all technologists need to keep in mind a multi-level, multi-part model of
+technology that takes into account the technological but also the social, the cultural,
+the legal, all of these aspects of development. All technologists need to be trained in
+the human as well as the technological so that they understand uses to which their
+technology could be put and reflect on the uses they want it to be put to.</p>
+    <h1>What will computing look like in 2030?</h1>
+    <p>We have no idea yet because change is happening so quickly. We know that
+quantum computing – the introduction of physics into the field of computer science –
+is going to be extremely important; that computers are going to become really, very
+tiny, the size of an atom. That’s going to make a huge difference; nano-computing,
+very small computers that you might swallow inside a pill and that will then learn
+about your illness and set about curing it; that brings together biological computing
+as well, where we can print parts of the body. So I think we’re going to see the
+increasing infusing of computing into all aspects of our lives. If our Council has its
+way, we’re going to see an increasing sense of responsibility on the part of
+technologists to ensure that those developments are for good.</p>
   </div>
+  <img src="https://i.pinimg.com/736x/28/3b/21/283b211e5736bea91f3e75a0f5864d85--computer-keyboard-computer-technology.jpg">
  
 </body>
 </html>
