Needles files deleted, some file names decapitalized, and some links repeared.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="data_security/index.html">Data security</a>
     <a href="Virus/Main.html">Viruses</a>
     <a href="Encryption - P,O,C/index.html">Encryption</a>
-    <a href="AI/index.html">AI</a>
+    <a href="AI/index.html">AI_team1</a>
   </div>
   <div id="maincontent">
     <h1>IT and Society</h1>
