Refining the home of homes.

--- a/index.html
+++ b/index.html
@@ -9,41 +9,54 @@
     <a href="example/index.html">Example</a>
     <a href="phishing/index.html">Phishing</a>
     <a href="data_security/index.html">Data security</a>
-    <a href="Virus/Main.html">Viruses</a>
-    <a href="Encryption - P,O,C/index.html">Encryption</a>
-    <a href="AI/index.html">AI_team1</a>
+    <a href="virus/main.html">Viruses</a>
+    <a href="encryption_poc/index.html">Encryption</a>
+    <a href="ai_team1/index.html">AI Team 1</a>
   </div>
   <div id="maincontent">
-    <h1>IT and Society</h1>
+    <h1 style="text-align:center">IT and Society</h1>
 
     <p>This is the main page of the IT and Society project.
       The links above take you to specific topics.</p>
 
     <p>Done by EEB2 students of ICT (S4) in 2018 with some
-       guidance provided by teacher Mr. Kerkkänen.</p>
+       guidance provided by teacher Mr. Kerkk&auml;nen.</p>
 
     <p style="font-weight: bold">Some learning targets of the project:</p>
-    <p>Version management (Git & GitHub with Atom)</p>
-    <p>Project management and collaboration</p>
-    <p>HTML and CSS</p>
-    <p>About the topics</p>
-
-    <h2>Requirements:</h2>
     <ul>
-    - <li>Every team creates a topic-specific folder to manage the files related to the topic.</li>
-    - <li>Create an `index.html` file in your folder. This is the main page of your topic.</li>
-    - Every team creates a CSS file to change the look of the topic pages. Name it `styles_X.css` where X is replaced by your topic name (or its shorthand expression). Save the CSS file in the `styles` folder and add links to your pages to make it work.
-    - Present your topic in a simple and understandable way. Divide it into logical parts and make the site structure accordingly.
-    - Write your own text. Don't copy-and-paste text without a good reason - and in that case mark the source immediately. *Note: if you don't understand a word or an expression, don't use it! Write the idea in other words or leave it out.*
-    - Linking: you must be able to easily navigate between the pages in your topic folder. Preserve the link to the home of homes, too.
-    - Sources: make a separate HTML page to list the sources (give the links, too).
-    - Copyright: make sure you are allowed to use the images and other materials and follow the given source marking recommendations.
+      <li>Version management (Git & GitHub with Atom)</li>
+      <li>Project management and collaboration</li>
+      <li>HTML and CSS</li>
+      <li>Topics</li>
     </ul>
-    ## Help for citing and sources:
-    - https://wiki.creativecommons.org/wiki/Best_practices_for_attribution (CC-licenced material).
-    - http://www.plagiarism.org/article/how-do-i-cite-sources
-
-  </div>
+    <div id="info">
+      <h2>Requirements:</h2>
+      <ul>
+        <li>Every team creates a topic-specific folder to manage the files related to the topic.</li>
+        <li>Create an `index.html` file in your folder. This is the main page of your topic.</li>
+        <li>Every team creates a CSS file to change the look of the topic pages.
+          Name it `styles_X.css` where X is replaced by your topic name (or its
+          shorthand expression). Save the CSS file in the `styles` folder and add
+          links to your pages to make it work.</li>
+        <li>Present your topic in a simple and understandable way. Divide it into
+          logical parts and make the site structure accordingly.</li>
+        <li>Write your own text. Don't copy-and-paste text without a good reason -
+          and in that case mark the source immediately. *Note: if you don't understand
+          a word or an expression, don't use it! Write the idea in other words or
+          leave it out.*</li>
+        <li>Linking: you must be able to easily navigate between the pages in your
+          topic folder. Preserve the link to the home of homes, too.</li>
+        <li>Sources: make a separate HTML page to list the sources (give the links, too).</li>
+        <li>Copyright: make sure you are allowed to use the images and other materials
+          and follow the given source marking recommendations.</li>
+      </ul>
+      <h2>Help for citing and sources:</h2>
+      <p><a href="https://wiki.creativecommons.org/wiki/Best_practices_for_attribution">
+        Creative Commons - Best practices for attribution (CC-licenced material).</a></p>
+      <p><a href="http://www.plagiarism.org/article/how-do-i-cite-sources">
+        How to cite sources</a></p>
+    </div>
+  </div>  
 
 </body>
 </html>
