--- a/ai_team1/index.html
+++ b/ai_team1/index.html
@@ -8,8 +8,8 @@
     <a href="../example/index.html">Example</a>
     <a href="../phishing/index.html">Phishing</a>
     <a href="../data_security/index.html">Data security</a>
-    <a href="../Virus/index.html">Viruses</a>
-    <a href="../Encryption - P,O,C/index.html">Encryption</a>
+    <a href="../virus/index.html">Viruses</a>
+    <a href="../encryption_poc/index.html">Encryption</a>
     </div>
     <div class="parallax">
     <h1 class="BIGASSTITLE">AI</h1>
@@ -18,7 +18,7 @@
       <a href="what_is_it.html" class="MEDIUMASSTITLE">What is it?</a>
       <p class="NORMALASSTEXT"></p>
       </div>
-    
+
      <div class="footer">
       <p></p>
     </div>
