--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -17,7 +17,7 @@
     </div>
     <p class="NORMALASSTEXT">Artificial intelligence (AI) is an area of computer science that works  on the creation of intelligent machines that work and react like humans. It has become an essential part of the technology industry.
     Some of the activities computers with artificial intelligence are designed for include:</p>
-    <ul>
+    <ul class="NORMALASSTEXT">
       <li>Speech recognition</li>
       <li>Learning</li>
       <li>Planning</li>
