--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -27,8 +27,6 @@ Some of the activities computers with artificial intelligence are designed for i
       <li>Problem solving</li>
     </ul>
     
-    <div class="footer">
-      <p></p>
-    </div>
+ <div id="site-footer"></div>
   </body>
 </html>
