--- a/ai_team1/index.html
+++ b/ai_team1/index.html
@@ -12,11 +12,11 @@
     <a href="../encryption_poc/index.html">Encryption</a>
     </div>
     <div class="parallax">
-    <h1 class="BIGASSTITLE">AI</h1>
+    <h1 class="BIGTITLE">AI</h1>
       </div>
     <div class="parallax2">
-      <a href="what_is_it.html" class="MEDIUMASSTITLE">What is it?</a>
-      <p class="NORMALASSTEXT"></p>
+      <a href="what_is_it.html" class="MEDIUMTITLE">What is it?</a>
+      <p class="NORMALTEXT"></p>
       </div>
 
      <div class="footer">
