--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -13,14 +13,14 @@
       <a href="index.html">AI</a>
     </div>
     <div class="parallax">
-      <h1 class="BIGASSTITLE">What is it?</h1>
+      <h1 class="BIGTITLE">What is it?</h1>
     </div>
-    <p class="NORMALASSTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.
+    <p class="NORMALTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.
 <br>
 <div class="QUOTE>"" AI research is defined as the study of "intelligent agents": any device that perceives its environment and takes actions that maximize its chance of successfully achieving its goals. " (from wikipedia).</div>
 <br>
 Some of the activities computers with artificial intelligence are designed for include:</p>
-    <ul class="NORMALASSTEXT">
+    <ul class="NORMALTEXT">
       <li>Speech recognition</li>
       <li>Learning</li>
       <li>Planning</li>
