--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -8,8 +8,8 @@
       <a href="../example/index.html">Example</a>
       <a href="../phishing/index.html">Phishing</a>
       <a href="../data_security/index.html">Data security</a>
-      <a href="../Virus/index.html">Viruses</a>
-      <a href="../Encryption - P,O,C/index.html">Encryption</a>
+      <a href="../virus/index.html">Viruses</a>
+      <a href="../encryption_poc/index.html">Encryption</a>
       <a href="index.html">AI</a>
     </div>
     <div class="parallax">
