--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -15,11 +15,9 @@
     <div class="parallax">
       <h1 class="BIGTITLE">What is it?</h1>
     </div>
-    <p class="NORMALTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.
-<br>
-<div class="QUOTE>"" AI research is defined as the study of "intelligent agents": any device that perceives its environment and takes actions that maximize its chance of successfully achieving its goals. " (from wikipedia).</div>
-<br>
-Some of the activities computers with artificial intelligence are designed for include:</p>
+    <p class="NORMALTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.</p>
+<p class="QUOTE>"" AI research is defined as the study of "intelligent agents": any device that perceives its environment and takes actions that maximize its chance of successfully achieving its goals. " (from wikipedia).</p>
+<p class="NORMALTEXT">Some of the activities computers with artificial intelligence are designed for include:</p>
     <ul class="NORMALTEXT">
       <li>Speech recognition</li>
       <li>Learning</li>
