--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -25,6 +25,8 @@
       <li>Problem solving</li>
     </ul>
     
- <div id="site-footer"></div>
+ <div id="footer">
+   <p></p>
+    </div>
   </body>
 </html>
