--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -16,7 +16,6 @@
       <h1 class="BIGTITLE">What is it?</h1>
     </div>
     <p class="NORMALTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.</h2>
-<h2 class="QUOTE">"A computer would deserve to be called intelligent if it could deceive a human into believing that it was human." - Alan Turing.</p>
 <p class="NORMALTEXT">Some of the activities computers with artificial intelligence are designed for include:</p>
     <ul class="NORMALTEXT">
       <li>Speech recognition</li>
@@ -24,7 +23,7 @@
       <li>Planning</li>
       <li>Problem solving</li>
     </ul>
-    
+    <h2 class="QUOTE">"A computer would deserve to be called intelligent if it could deceive a human into believing that it was human." - Alan Turing.</h2>
  <div class="footer">
    <p></p>
     </div>
