--- a/ai_team1/index.html
+++ b/ai_team1/index.html
@@ -12,14 +12,15 @@
     <a href="../encryption_poc/index.html">Encryption</a>
     </div>
     <div class="parallax">
-    <h1 class="BIGTITLE">AI</h1>
-      </div>
+      <h1 class="BIGTITLE">AI</h1>
+    </div>
     <div class="parallax2">
       <a href="what_is_it.html" class="MEDIUMTITLE">What is it?</a>
-      <p class="NORMALTEXT"></p>
-      </div>
-
-     <div class="footer">
+    </div>
+    <div class="parallax3">
+      <a href="sources.html" class="MEDIUMTITLE">Sources</a>
+    </div>
+    <div class="footer">
       <p></p>
     </div>
   </body>
