--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -15,7 +15,7 @@
     <div class="parallax">
       <h1 class="BIGTITLE">What is it?</h1>
     </div>
-    <p class="NORMALTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.</h2>
+    <p class="NORMALTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.</p>
 <p class="NORMALTEXT">Some of the activities computers with artificial intelligence are designed for include:</p>
     <ul class="NORMALTEXT">
       <li>Speech recognition</li>
