--- a/ai_team1/sources.html
+++ b/ai_team1/sources.html
@@ -1,1 +1,29 @@
 <html>
+  <head>
+    <tiltle>Sources</title>
+    <link rel="stylesheet" type="text/css" href="style_AI.css">
+  </head>
+  <body>
+    <div id="navbar">
+      <a href="../index.html">Home</a>
+      <a href="../example/index.html">Example</a>
+      <a href="../phishing/index.html">Phishing</a>
+      <a href="../data_security/index.html">Data security</a>
+      <a href="../virus/index.html">Viruses</a>
+      <a href="../encryption_poc/index.html">Encryption</a>
+      <a href="index.html">AI</a>
+    </div>
+    <div class="parallax">
+      <h1 class="BIGTITLE">Sources</h1>
+    </div>
+    <ul class="NORMALTEXT">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+ <div class="footer">
+   <p></p>
+    </div>
+  </body>
+</html>
