--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>What is it?</title>
     <link rel="stylesheet" type="text/css" href="style_AI.css">
   </head>
   <body>
