--- a/ai_team1/index.html
+++ b/ai_team1/index.html
@@ -18,7 +18,10 @@
     <div class="parallax2">
       <a href="what_is_it.html" class="MEDIUMTITLE">What is it?</a>
     </div>
-    <div class="parallax3">
+     <div class="parallax3">
+      <a href="history.html" class="MEDIUMTITLE">History</a>
+    </div>
+    <div class="parallax4">
       <a href="sources.html" class="MEDIUMTITLE">Sources</a>
     </div>
     <div class="footer">
